# d11-react-native-mqtt

./: .editorconfig  .gitignore  .nvmrc  .release-it.json  CONTRIBUTING.md  LICENSE  README.md  d11-mqtt.podspec  jest.config.js  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
__mocks__/: global.ts  mqttModule.ts  react-native.ts
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/dream11/mqtt/: MqttConnectOptions.kt  MqttHelper.kt  MqttManager.kt  MqttModule.kt  MqttModuleImpl.kt  MqttPackage.kt
android/src/main/java/com/dream11/mqtt/helpers/: ArrayUtils.kt  MapUtils.kt
example/: Gemfile  app.json  package.json  tsconfig.json
example/android/: build.gradle  settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx  Button.tsx  create-mqtt.ts  createMqtt.ts  mqttConstants.ts  mqttService.ts  mqttUtils.ts  subscribe-mqtt.ts  useEventListeners.tsx
ios/: MqttEventEmitter.h  MqttEventEmitter.mm  MqttJSIUtils.h  MqttJSIUtils.mm  MqttModule.h  MqttModule.mm
ios/mqtt/: Mqtt.swift  MqttDelegate.swift  MqttHelper.swift  MqttHelperOptions.swift  MqttManager.swift
jest/: setup.ts
scripts/helpers/: generate-mocks.js
src/: index.tsx
src/Modules/: mqtt-module.ts  mqttModule.ts
src/Mqtt/: EventEmitter.ts  Mqtt.ts  MqttClient.constants.ts  MqttClient.interface.ts  MqttClient.ts  MqttClient.utils.ts  index.ts
src/__tests__/: Mqtt.test.ts  MqttClient.utils.test.ts  eventEmitter.test.ts  mqttClient.test.ts  (+1 more)
(+13 files in other folders)
